<resources>
    <string name="app_name">TOOL BET 5.0</string>
    <string name="soban">Số bàn:</string>
    <string name="phantich">Phân tích</string>
    <string name="ketqua_chanle">Kết quả chẵn lẻ:</string>
    <string name="ketqua_rongho">Kết quả rồng hổ:</string>
    <string name="ketqua_player">Kết quả Player:</string>
    <string name="ketqua">Kết quả:</string>
    <string name="ketqua_banker">Kết quả Banker:</string>
    <string name="ketqua_taixiu">Kết quả tài xỉu:</string>
    <string name="ketqua_tobe">Kết quả to bé:</string>
    <string name="tenbancanphantich">Tên bàn cần phân tích</string>
    <string name="nhaptenbanbaogom">Nhập tên bàn cần phân tích</string>
    <string name="huongdan">HD: nhập tên bàn và đợi máy xóc xong bấm nút phân tích, hệ thống sẽ đưa ra kết quả phân tích</string>
    <string name="chucmayman">Chúc bạn may mắn!</string>
    <string name="chaomungtoianalyzer">Chào mừng tới TOOL BET 5.0</string>
    <string name="huongdannhapotp">  Vui lòng nhập mã phần mềm vào ô</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="nhanmaphanmem">NHẬN MÃ PHẦN MỀM</string>
    <string name="phonezalo">0564418331</string>
    <string name="vui_long_doi">Vui lòng đợi</string>
    <string name="check_connection_network">Vui lòng kiểm tra lại kết nối mạng</string>
    <string name="xocdia">XÓC ĐĨA</string>
    <string name="baccarat">BACCARAT</string>
    <string name="taixiu">TÀI XỈU</string>
    <string name="rongho">RỒNG HỔ</string>
    <string name="soicau">SOI CẦU 3 MIỀN</string>
    <string name="soicau_khong_wm">SOI CẦU</string>
    <string name="bachthulo">BẠCH THỦ LÔ</string>
    <string name="bachthulo_lower">Bạch thủ lô</string>
    <string name="songthulo">SONG THỦ LÔ</string>
    <string name="songthulo_1_lower">Song thủ lô 1</string>
    <string name="songthulo_2_lower">Song thủ lô 2</string>
    <string name="dande6x">DÀN ĐỀ 6X</string>
    <string name="copy">COPY DÀN SỐ</string>
    <string name="nguyentachoatdong">NGUYÊN TẮC HOẠT ĐỘNG</string>
    <string name="lottobetb">LOTTOBET - B</string>
    <string name="soky">SỐ KỲ</string>
    <string name="haunhidigit">HẬU NHỊ DIGIT</string>
    <string name="nhap_ten_khach_hang_timkiem">Nhập thông tin tìm kiếm</string>
    <string name="qluser">QL Mã Code</string>
    <string name="qlLottoBet">QL Lotto Bet</string>
    <string name="qlSoiCauMB">QL Soi Cầu</string>
    <string name="game">TOOL BET 5.0</string>
    <string name="themmoilottobet">Thêm mới LOTTOBET - B</string>
    <string name="sokyhint">Số kỳ</string>
    <string name="haunhihint">Hậu nhị Digit</string>
    <string name="them_moi">Thêm mới</string>
    <string name="huy_bo">Hủy bỏ</string>
    <string name="vui_long_nhap_day_du_thong_tin">Vui lòng nhập đầy đủ thông tin</string>
    <string name="vui_long_nhap_dung_thong_tin">Vui lòng nhập đúng thông tin</string>
    <string name="sokydatontai">Số kỳ đã tồn tại</string>
    <string name="themmoithanhcong">Thêm mới thành công</string>
    <string name="capnhatthanhcong">Cập nhật thành công</string>
    <string name="capnhatthatbai">Cập nhật thất bại</string>
    <string name="themmoithatbai">Thêm mới không thành công</string>
    <string name="khongcodulieu">Không có dữ liệu</string>
    <string name="themmoiuser">Thêm mới Code OTP</string>
    <string name="soluongcodetaomoi">Nhập số lượng code mới nhỏ hơn 100</string>
    <string name="admin">Quản lý</string>
    <string name="user">Người dùng</string>
    <string name="loai">Loại:</string>
    <string name="vaitro">Vai trò:</string>
    <string name="menu">Menu:</string>
    <string name="menu34">3, 4</string>
    <string name="menu1234">1, 2, 3, 4</string>
    <string name="tongsouser">Tổng số mã:</string>
    <string name="doanh_so">Đã sử dụng:</string>
    <string name="tongsouserfree">Còn lại:</string>
    <string name="kymoinhat">Kỳ mới nhất:</string>
    <string name="haunhidigt">Hậu nhị Digit:</string>
    <string name="taoluc">Tạo lúc:</string>
    <string name="ngaymoinhat">Ngày mới nhất:</string>
    <string name="bachthulo_haicham">Bạch thủ lô:</string>
    <string name="songthulo_haicham">Song thủ lô:</string>
    <string name="themmoisoicaumb">Thêm mới soi cầu Miền Bắc</string>
    <string name="themmoisoicaumt">Thêm mới soi cầu Miền Trung</string>
    <string name="themmoisoicaumn">Thêm mới soi cầu Miền Nam</string>
    <string name="dande6x_60_64">Dàn đề 6X trong khoảng 60 tới 64 số</string>
    <string name="chitiet">Chi tiết</string>
    <string name="sua">Sửa</string>
    <string name="capnhat">Cập nhật</string>
    <string name="ngaydatontai">Đã tồn tại dữ liệu cho ngày nhập</string>
    <string name="chuacoketquahientai">Chưa có kết quả cho ngày hiện tại</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="bankhongcoquyentruycap">Bạn không có quyền truy cập chức năng này</string>
    <string name="pytal_web">HACKBET 5.0</string>
    <string name="setting">Cài đặt</string>
    <string name="nhap_nha_dai">Nhập tên đài (không bắt buộc)</string>
    <string name="mien_bac">Miền Bắc</string>
    <string name="mien_trung">Miền Trung</string>
    <string name="mien_nam">Miền Nam</string>
    <string name="sodienthoai_lienhe">Số điện thoại liên hệ</string>
    <string name="cauhinh_huongdan_xocdia">Cấu hình hướng dẫn Xóc đĩa</string>
    <string name="cauhinh_huongdan_taixiu">Cấu hình hướng dẫn Tài xỉu</string>
    <string name="cauhinh_huongdan_baccarat">Cấu hình hướng dẫn Baccarat</string>
    <string name="nhap_daydy_thong_tin">Cần nhập đầy đủ thông tin</string>
    <string name="btnKuCasino">KU CASINO</string>
    <string name="btnWmCasino">WM CASINO</string>
    <string name="btnBBinCasino">BBIN CASINO</string>
    <string name="btnXocDia3D">XÓC ĐĨA 3D</string>
</resources>