<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAddNewCustomerDlg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:background="@color/colorDenMo"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_8sdp"
        android:text="@string/themmoiuser"
        android:textColor="@color/colorVang"
        android:textSize="@dimen/_15ssp" />

    <EditText
        android:id="@+id/edtQuantityNewCodeUserDlg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:background="@drawable/edt_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/soluongcodetaomoi"
        android:inputType="number"
        android:maxLength="2"
        android:padding="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp" />

    <requestFocus />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radioUserDlg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/user"
                android:textSize="@dimen/_14ssp" />

            <RadioButton
                android:id="@+id/radioManageUserDlg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/admin"
                android:textSize="@dimen/_14ssp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancelUserDlg"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_bg_bovien_button_xam"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/huy_bo"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/btnAgreeUserDlg"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_bg_button_black"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/them_moi"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>