<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/sodienthoai_lienhe"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtSDTSetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:background="@drawable/edt_custom"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:inputType="text"
            android:maxLength="100"
            android:paddingStart="@dimen/_8sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/cauhinh_huongdan_xocdia"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtHuongDanXocDiaSetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:background="@drawable/edt_custom"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:inputType="text"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/cauhinh_huongdan_taixiu"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtHuongDanTaiXiuSetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:background="@drawable/edt_custom"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:inputType="text"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:text="@string/cauhinh_huongdan_baccarat"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtHuongDanBaccaratSetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:background="@drawable/edt_custom"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:inputType="text"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnUpdateSettings"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_100sdp"
            android:background="@drawable/shape_bg_button_black"
            android:text="@string/capnhat"
            android:textColor="@color/colorVang"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

</ScrollView>