<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_de"
    android:orientation="vertical"
    android:weightSum="10">

    <ImageView
        android:id="@+id/imv_app"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_weight="2"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/ic_app"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvTitleApp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/pytal_web"
        android:textColor="@color/colorVang"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_weight="5"
        android:background="@color/white"
        android:elevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical"
            android:padding="@dimen/_18sdp">

            <Button
                android:id="@+id/btnMienBacOptionSoiCau"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/shape_bg_button_black"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/mien_bac"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMienTrungOptionSoiCau"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/shape_bg_button_black"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/mien_trung"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMienNamOptionSoiCau"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/shape_bg_button_black"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/mien_nam"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="UselessLeaf" />
</LinearLayout>