<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDenMo"
    android:orientation="vertical"
    android:weightSum="13.2">

    <ImageView
        android:id="@+id/imvAppSoiCauGame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/ic_app"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvSoiCauGame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_weight="1.2"
        android:background="@drawable/shape_bg_black"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/soicau"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDateCurrentSoiCauGame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="..."
        android:textColor="@color/colorVang"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_weight="10"
        android:background="@color/white"
        android:elevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:weightSum="14">

            <TextView
                android:id="@+id/tvBachThuLo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bachthulo"
                android:textColor="@color/colorXanhChild"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBachthuLoValueGame"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="..."
                android:textColor="@color/colorHong"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSongThuLo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/songthulo"
                android:textColor="@color/colorXanhChild"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSongThuLoValueGame"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="..."
                android:textColor="@color/colorHong"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDanDe6x"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dande6x"
                android:textColor="@color/colorXanhChild"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDanDe6xValueGame"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="8"
                android:background="@drawable/shape_bg_button_black"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorVang"
                android:textSize="@dimen/_17ssp" />

            <Button
                android:id="@+id/btnCopyDanso6XGame"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/shape_bg_button_do"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/copy"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>